gitops/plane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plane
  annotations:
    argocd.argoproj.io/sync-wave: '-3'
