gitops/plane/upstream.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-admin
  labels:
    app.name: plane-plane-admin
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  clusterIP: None
  ports:
  - name: admin-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.name: plane-plane-admin
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-api
  labels:
    app.name: plane-plane-api
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  clusterIP: None
  ports:
  - name: api-8000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.name: plane-plane-api
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-live
  labels:
    app.name: plane-plane-live
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  clusterIP: None
  ports:
  - name: live-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.name: plane-plane-live
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-rabbitmq
  labels:
    app.name: plane-plane-rabbitmq
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  clusterIP: None
  ports:
  - name: rabbitmq-5672
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: rabbitmq-mgmt-15672
    port: 15672
    protocol: TCP
    targetPort: 15672
  selector:
    app.name: plane-plane-rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-redis
  labels:
    app.name: plane-plane-redis
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  clusterIP: None
  ports:
  - name: redis-6379
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app.name: plane-plane-redis
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-space
  labels:
    app.name: plane-plane-space
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  clusterIP: None
  ports:
  - name: space-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.name: plane-plane-space
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-web
  labels:
    app.name: plane-plane-web
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  clusterIP: None
  ports:
  - name: web-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.name: plane-plane-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-admin-wl
  labels:
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-plane-admin
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-plane-admin
        helm.sh/chart: plane-ce-1.8.0
        app.kubernetes.io/name: plane-ce
        app.kubernetes.io/instance: plane
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: 1.4.1
    spec:
      containers:
      - name: plane-admin
        imagePullPolicy: IfNotPresent
        image: artifacts.plane.so/makeplane/plane-admin:v1.4.2
        stdin: true
        tty: true
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 384Mi
            cpu: 500m
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-api-wl
  labels:
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-plane-api
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-plane-api
        helm.sh/chart: plane-ce-1.8.0
        app.kubernetes.io/name: plane-ce
        app.kubernetes.io/instance: plane
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: 1.4.1
    spec:
      containers:
      - name: plane-api
        imagePullPolicy: IfNotPresent
        image: artifacts.plane.so/makeplane/plane-backend:v1.4.2
        stdin: true
        tty: true
        resources:
          requests:
            memory: 768Mi
            cpu: 500m
          limits:
            memory: 1536Mi
            cpu: '2'
        command:
        - ./bin/docker-entrypoint-api.sh
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-beat-worker-wl
  labels:
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-plane-beat-worker
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-plane-beat-worker
        helm.sh/chart: plane-ce-1.8.0
        app.kubernetes.io/name: plane-ce
        app.kubernetes.io/instance: plane
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: 1.4.1
    spec:
      containers:
      - name: plane-beat-worker
        imagePullPolicy: IfNotPresent
        image: artifacts.plane.so/makeplane/plane-backend:v1.4.2
        stdin: true
        tty: true
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
        command:
        - ./bin/docker-entrypoint-beat.sh
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-live-wl
  labels:
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-plane-live
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-plane-live
        helm.sh/chart: plane-ce-1.8.0
        app.kubernetes.io/name: plane-ce
        app.kubernetes.io/instance: plane
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: 1.4.1
    spec:
      containers:
      - name: plane-live
        imagePullPolicy: IfNotPresent
        image: artifacts.plane.so/makeplane/plane-live:v1.4.2
        stdin: true
        tty: true
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-space-wl
  labels:
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-plane-space
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-plane-space
        helm.sh/chart: plane-ce-1.8.0
        app.kubernetes.io/name: plane-ce
        app.kubernetes.io/instance: plane
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: 1.4.1
    spec:
      containers:
      - name: plane-space
        imagePullPolicy: IfNotPresent
        image: artifacts.plane.so/makeplane/plane-space:v1.4.2
        stdin: true
        tty: true
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 384Mi
            cpu: 500m
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-web-wl
  labels:
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-plane-web
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-plane-web
        helm.sh/chart: plane-ce-1.8.0
        app.kubernetes.io/name: plane-ce
        app.kubernetes.io/instance: plane
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: 1.4.1
    spec:
      containers:
      - name: plane-web
        imagePullPolicy: IfNotPresent
        image: artifacts.plane.so/makeplane/plane-frontend:v1.4.2
        stdin: true
        tty: true
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plane
  name: plane-worker-wl
  labels:
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-plane-worker
  template:
    metadata:
      namespace: plane
      labels:
        app.name: plane-plane-worker
        helm.sh/chart: plane-ce-1.8.0
        app.kubernetes.io/name: plane-ce
        app.kubernetes.io/instance: plane
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: 1.4.1
    spec:
      containers:
      - name: plane-worker
        imagePullPolicy: IfNotPresent
        image: artifacts.plane.so/makeplane/plane-backend:v1.4.2
        stdin: true
        tty: true
        resources:
          requests:
            memory: 768Mi
            cpu: 250m
          limits:
            memory: 1536Mi
            cpu: '1'
        command:
        - ./bin/docker-entrypoint-worker.sh
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: plane
  name: plane-rabbitmq-wl
  labels:
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  selector:
    matchLabels:
      app.name: plane-plane-rabbitmq
  serviceName: plane-rabbitmq
  template:
    metadata:
      labels:
        app.name: plane-plane-rabbitmq
        helm.sh/chart: plane-ce-1.8.0
        app.kubernetes.io/name: plane-ce
        app.kubernetes.io/instance: plane
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: 1.4.1
    spec:
      containers:
      - image: rabbitmq:3.13.6-management-alpine
        imagePullPolicy: IfNotPresent
        name: plane-rabbitmq
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: pvc-plane-rabbitmq-vol
          subPath: ''
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      namespace: plane
      name: pvc-plane-rabbitmq-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: local-path
      volumeMode: Filesystem
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: plane
  name: plane-redis-wl
  labels:
    helm.sh/chart: plane-ce-1.8.0
    app.kubernetes.io/name: plane-ce
    app.kubernetes.io/instance: plane
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.4.1
spec:
  selector:
    matchLabels:
      app.name: plane-plane-redis
  serviceName: plane-redis
  template:
    metadata:
      labels:
        app.name: plane-plane-redis
        helm.sh/chart: plane-ce-1.8.0
        app.kubernetes.io/name: plane-ce
        app.kubernetes.io/instance: plane
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: 1.4.1
    spec:
      containers:
      - image: valkey/valkey:7.2.11-alpine
        imagePullPolicy: IfNotPresent
        name: plane-redis
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /data
          name: pvc-plane-redis-vol
          subPath: ''
      serviceAccount: plane-srv-account
      serviceAccountName: plane-srv-account
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      namespace: plane
      name: pvc-plane-redis-vol
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: local-path
      volumeMode: Filesystem
